# filmweb-csv

./: .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
.github/workflows/: rust-ci.yml
scripts/: getCookies.js
src/: api.rs  cli.rs  error.rs  main.rs  util.rs
