[package]
name = "filmweb-csv"
version = "0.1.0"
edition = "2021"
description = "Effortless Filmweb data -> CSV fetching."
authors = ["wedkarz02"]

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
dotenvy = "0.15.7"
flexi_logger = "0.29.3"
futures = "0.3.31"
indicatif = "0.17.8"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
tokio = { version = "1.40.0", features = ["full"] }
